tests/NormalTests/paczka1/fuzzy1/72978983.err
Error in line 3: tbncg3fla S178 40,07
Error in line 5: oQ7 A304 92,6
Error in line 13: oQ7 S178 1651
Error in line 12: eMQ S909 25,9
Error in line 17: A304¥S178¥0,7
Error in line 26: wQNG)60 A304 11,6
Error in line 21: zBFP8I A304 74,3
Error in line 29: zBFP8I S909 74,`
